uubloomington/uubloomington/static/css/uubloomington.css
@font-face {
  font-family: 'League Spartan Variable';
  src: url('/static/fonts/LeagueSpartanVariable.woff2') format('woff2-variations');
  font-weight: 200 900;
}
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    --page-width: 85rem;
    --standard-gap: 1.5rem;
    --standard-radius: 2rem;
    --hover-transition-time: 180ms;
}

body {
    background: #ffffff;
    align-content: center;
    min-height: 100vh;
    min-height: 100dvh;
    display: grid;
    grid-template-rows:
        auto /*Wagtail User Bar*/
        auto /*Header*/
        auto /*Navbar*/
        1fr /*Content*/
        auto; /*Footer*/
    font-family: "League Spartan Variable";
    font-size: 1.2rem;
    line-height: 1.5rem;
}

img {
    border-radius: var(--standard-radius);
}

h1 {
    line-height: initial;
}

h2 {
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 450;
    margin-bottom: 1rem;
    line-height: initial;
}

h3 {
    line-height: initial;
}

article > h2 {
    margin: auto;
}

article li {
    margin-bottom: 0.25rem;
}

a {
    tab-index: 0;
}

/*Support Wagtail Rich Text image classes*/
.left,
.right {
    max-width: 45%;
    height: auto;
}

.left {
    float: left;
    margin: 0 0.75rem 0.75rem 0;
}

.right {
    float: right;
    margin: 0 0 0.75rem 0.75rem;
}

.full-width {
    max-width: 100%;
    align-self: center;
}
/*End Wagtail Rich Text image classes*/

/*Support custom text-align Rich Text blocks*/
p.centered {
    text-align: center;
}

p.right-aligned {
    text-align: right;
}
/*End custom text-align blocks*/

#content {
    max-width: var(--page-width);
    width: 100%;
    margin: auto;
    height: 100%;
    display: grid;
    grid-template-columns: 30ch auto;
    background: white;
}

.site-logo > svg {
    fill: #006b1b;
    height: 100px;
}

header {
    background: white;
    padding: 20px calc(calc(100% - var(--page-width)) / 2);
    display: flex;
}

.header-left {
    display: flex;
    margin-left: 1rem;
}

.header-right {
    margin-right: 1rem;
    margin-left: auto;
    font-family: "League Spartan Variable";
    display: flex;
    flex-direction: column;
    font-variation-settings: "wght" 345;
    text-align: right;
}

.announcement {
    font-size: 1.8rem;
    margin-top: auto;
    margin-bottom: auto;
    color: #505050;
    white-space: nowrap;
}

.site-title {
    align-self: center;
    margin-left: 20px;
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 345;
}

nav > .nav {
    display: flex;
    /*padding: 0 calc(calc(100% - var(--page-width)) / 2);*/
    padding: 0;
    align-items: start;
    max-width: calc(var(--page-width) - 2rem);
    margin: auto;
    background: white;
    border-bottom: 3px solid #006b1b;
    text-decoration: none;
    color: white;
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 350;
    font-size: 1.5rem;
}

nav > .nav li {
    list-style: none;
    width: auto;
    height: 100%;
    position: relative;
    background: unset;
    transition: background var(--hover-transition-time);
    white-space: nowrap;
    color: black;
    padding: 0;
}

.nav li a {
    color: black;
    transition: color var(--hover-transition-time);
    padding: 0.75rem 1.5rem;
}

.nav li:hover a,
.nav li.ancestor a,
.nav li.active a,
.nav li.expand a {
    color: white;
    transition: color var(--hover-transition-time);
}

nav > .nav > li > ul {
    display: none;
}

nav > .nav > li.expand > ul {
    display: unset;
    position: absolute;
    /*background: #005000;*/
    background: #006b1b;
    z-index: 1000;
}

nav > .nav li:hover {
    background: #006b1b;
    transition: background var(--hover-transition-time);
    color: white;
}

nav > .nav li.ancestor,
nav > .nav li.active,
nav > .nav li.expand {
    background: #006b1b;
}

.nav li > ul > li {
    background: unset;
    transition: background var(--hover-transition-time);
}

.nav li > ul > li:hover {
    background: #005000;
    transition: background var(--hover-transition-time);
}

nav > .nav a {
    text-decoration: none;
    display: block;
    width: 100%;
    height: 100%;
}

nav > .nav .menu-toggle {
    display: none;
}

article {
    max-width: var(--page-width);
    display: grid;
    gap: var(--standard-gap);
    padding: 1rem;
    margin: auto;
}

article > ul {
    list-style-position: inside;
}

.post {
    padding: 0.75rem;
    display: flex;
    flex-direction: column;
    gap: var(--standard-gap);
}

.post.less > * {
    display: none;
}

.post.less > p:nth-of-type(1),
.post.less > h3.post-title,
.post.less > .showmore {
    display: unset;
}

hr {
    width: 75%;
    margin: 1rem auto 1rem auto;
    border: 2px solid #006b1b;
}

@media screen and (max-width: 60rem) {
    /*Responsive Header*/
    header {
        flex-direction: column;
        align-content: center;
    }

    .header-right,
    .header-left {
        margin: auto;
    }

    .header-right {
        flex-direction: column-reverse;
    }

    .header-links {
        align-self: center;
    }
    /*End Responsive Header*/
}

@media screen and (max-width: 8in) {
    /*Responsive Navbar*/
    nav > .nav {
        flex-direction: column;
        width: 100%;
        gap: 0;
        background: #005000;
    }

    nav > .nav li {
        display: flex;
        flex-direction: column;
        width: 100%;
        margin: 0;
        background: #005000;
    }

    nav > .nav li.expand {
        padding-bottom: 0.5rem;
    }

    nav > .nav > li.expand > ul {
        display: flex;
        flex-direction: column;
        position: unset;
    }

    nav > .nav li > ul a {
        margin-left: 1rem;
    }

    nav > .nav li:hover {
        background: unset;
    }

    nav > .nav a {
        width: 100%;
        height: 100%;
        padding: 0.5rem;
        color: white;
    }

    nav > .nav li.active,
    nav > .nav li.expand,
    nav > .nav li.ancestor {
        background: #006b1b;
    }

    nav > .nav .menu-toggle {
        display: unset;
        text-align: center;
    }

    nav > .nav.closed li:not(.menu-toggle) {
        display: none;
    }

    /*End Responsive Navbar*/
    /*Responsive Header*/
    .site-title {
        text-align: center;
    }

    .site-title > h1 {
        font-size: 1.6rem;
    }
    .site-title > h2 {
        font-size: 1.3rem;
    }
    .site-title > h3 {
        font-size: 1rem;
    }
    .site-logo {
        align-self: center;
    }
    .site-logo > svg {
        width: 75px;
        height: auto;
    }
    .header-left {
        flex-direction: column;
    }

    header {
        flex-direction: column;
        align-content: center;
    }

    .header-right {
        margin-top: .5rem;
        margin-right: auto;
    }

    .announcement {
        font-size: 1.4rem;
    }
    /*End Responsive Header*/
    /*Center all rich text images on mobile*/
    .left,
    .right,
    .full-width {
        float: unset;
        display: block;
        margin-right: auto;
        margin-left: auto;
        max-width: 100%;
    }
    /*End Center all rich text images on mobile*/
    /*Move sidebar to bottom on mobile*/
    #content {
        grid-template-columns: unset;
    }

    #content .content {
        order: -1;
    }

    .sidebar::before {
        content: "";
        border-top: 2px solid #006b1b;
        width: 100%;
        display: block;
        margin-bottom: 0.75rem;
    }
    /*End Move sidebar to bottom on mobile*/
}

/*.events-container {*/
/*    contain: size;*/
/*    padding: 10px;*/
/*}*/

/*.events-container > ul {*/
/*    display: flex;*/
/*    flex-direction: column;*/
/*    gap: 10px;*/
/*}*/

.events-container li {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 0.13rem;
    width: 100%;
    border-radius: 5px;
}

.events-container li > .event-info {
    color: #303030;
}

.card-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
    gap: var(--standard-gap);
}

.card {
    font-family: "League Spartan Variable";
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background: #eeeeee;
    /*border: 1px solid #006b1b;*/
    border-radius: var(--standard-radius);
    /*padding: 1rem;*/
    overflow: clip;
}

.card > :not(img):not(h2) {
    margin-left: 1rem;
    margin-right: 1rem;
}

.card > img {
    /*margin: -1rem -1rem -1rem -1rem;*/
    width: 100%;
    height: auto;
}

.card h2 {
    width: 100%;
    text-align: center;
    margin-top: 0.5rem;
    font-variation-settings: "wght" 450;
}

.card h2:first-child {
    margin-top: var(--standard-gap);
}

.card-action {
    align-self: center;
    margin-top: auto;
    /*margin-bottom: calc(-2.5rem - 6px);*/
    padding: 1rem 1.5rem 0.85rem;
    border: 3px solid #006b1b;
    border-radius: 4rem;
    background: unset;
    color: black;
    text-decoration: none;
    transition: background var(--hover-transition-time), color var(--hover-transition-time);
    margin-bottom: 1rem;
}

.card-action:hover {
    background: #006b1b;
    color: white;
    transition: background var(--hover-transition-time), color var(--hover-transition-time);
}

.card > .events-container ul {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
}

.card > .events-container h3 {
    font-variation-settings: "wght" 450;
}

.event-title {
    display: flex;
}

.event-title a {
    margin-left: auto;
    margin-right: 0.25rem;
    white-space: nowrap;
}

/*.event-title > a {*/
/*    text-decoration: none;*/
/*    color: black;*/
/*    font-size: larger;*/
/*    font-weight: bold;*/
/*}*/

/*.events-container > h2 {*/
/*    margin-bottom: 10px;*/
/*}*/

/*.events-container li:hover {*/
/*    box-shadow: 0 0 3px inset black;*/
/*}*/

/*.events-container li:hover a {*/
/*    text-decoration: underline;*/
/*}*/

/*Footer*/
footer {
    /*max-width: var(--page-width);*/
    width: 100%;
    /*padding: 0 calc(calc(100% - 11in) / 2);*/
    /*min-height: 20rem;*/
    height: auto;
    padding: 1.5rem;
    margin: auto;
    background: #005000;
    color: white;
    display: flex;
    /*grid-template-columns: 1.5fr repeat(4, 1fr);*/
    gap: 1.5rem;
}

footer > :last-child {
    margin-right: 1rem;
    margin-left: auto;
}

footer a:link {
    color: #bee3f8;
}

footer a:visited {
    color: #e8dfff;
}

footer > div {
    flex-grow: 1;
}

footer .nav {
    list-style: none;
}

footer .nav > li ul {
    display: none;
}

footer .menu-toggle {
    display: none;
}

footer .block-image img {
    max-width: 100%;
    height: auto;
    max-height: 20rem;
}

.minister-feature {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.minister-feature > span > :not(p:first-of-type):not(img):not(h3):not(h4) {
    display: none;
}

.minister-feature h3 {
    margin-bottom: 0.5rem;
}

.minister-feature h4 {
    margin-bottom: 0.25rem;
}

/*End Footer*/

.sidebar {
    padding: 0.75rem;
    font-family: "League Spartan Variable";
}

.sidebar img {
    width: 100%;
    height: auto;
}

.sidebar ul {
    list-style: none;
}

.sidebar ul ul {
    padding-left: 0.75rem;
}

.sidebar li {
    margin-bottom: 0.5rem;
}

